--- a/packages/fizz-buzz/package.json
+++ b/packages/fizz-buzz/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "fizz-buzz": "node index.js"
+    "fizzbuzz": "node index.js"
   },
   "author": "sameer",
   "license": "ISC"
